<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="action_switch">Switch hunter</string>
    <string name="activity_hunter">Hunter</string>
    <string name="activity_map">Map</string>
    <string name="activity_organizer">Organizer</string>
    <string name="activity_position">Where\'s the egg?</string>
    <string name="activity_scan">Scan a code</string>
    <string name="activity_scan_egg">Scan an egg code</string>
    <string name="activity_welcome">Egg Hunt</string>
    <string name="app_name">Egg Hunt</string>
    <string name="button_find">I\'ve found an egg!</string>
    <string name="button_hide">Hide an egg</string>
    <string name="button_logout">Logout</string>
    <string name="button_post">Post</string>
    <string name="button_scan">Scan a code</string>
    <string name="egg">Egg</string>
    <string name="egg_count">%d eggs</string>
    <string name="error_crappy_code">You can\'t just scan every crappy code you find lying around…</string>
    <string name="error_different_competition">You just scanned an egg code from a different competition. Put it back before someone notices!</string>
    <string name="error_unexpected_competition">You just scanned a competition code. Please scan an egg code instead!</string>
    <string name="error_unexpected_egg">You just scanned an egg code. Please scan a competition code or a hunter code instead.</string>
    <string name="error_unexpected_hunter">You just scanned a hunter code. Please scan an egg code instead!</string>
    <string name="exclamation_no">Oh no, you don\'t! 😡</string>
    <string name="exclamation_oops">Oops! 😬</string>
    <string name="exclamation_psst">Psst! 🤫</string>
    <string name="exclamation_whoa">Whoa! 😯</string>
    <string name="header_rank">Rank %d</string>
    <string name="hint">Hint</string>
    <string name="time_found">Found at %s</string>
    <string name="time_found_by">Found at %s by %s</string>
    <string name="time_hidden">Hidden at %s</string>
    <string name="time_posted">Posted at %s</string>
    <string name="title_welcome0">Welcome to the egg hunt! 👋</string>
    <string name="title_welcome1">Get started by scanning an organizer code or a hunter code.</string>
    <string name="toast_camera_access_denied">Camera access denied.</string>
    <string name="toast_camera_access_granted">Camera access granted.</string>
    <string name="toast_location_access_denied">Location access denied.</string>
    <string name="toast_location_access_granted">Location access granted.</string>
    <string name="warning_logout">If you log out now, you\'ll need an organizer code or a hunter code to log back in!</string>

    <array name="medals">
        <item>🥇</item>
        <item>🥈</item>
        <item>🥉</item>
    </array>

    <array name="tabs">
        <item>Eggs</item>
        <item>Scores</item>
        <item>Hints</item>
    </array>
</resources>