<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:background="@color/gray2"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context=".hunter.HunterActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/hints"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/default_margin_s"
        android:layout_weight="1"
        android:layout_width="match_parent"/>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <EditText
            android:background="@drawable/rounded"
            android:hint="@string/hint"
            android:id="@+id/edit_post"
            android:importantForAutofill="no"
            android:inputType="textAutoCorrect"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin_l"
            android:layout_width="match_parent"
            android:padding="@dimen/default_padding_m"
            tools:ignore="LabelFor"/>

        <Button
            android:id="@+id/button_post"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin_l"
            android:layout_width="match_parent"
            android:text="@string/button_post"/>
    </LinearLayout>
</LinearLayout>
