<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/default_margin_l"
    android:layout_marginVertical="@dimen/default_margin_s"
    android:layout_width="match_parent"
    app:cardCornerRadius="@dimen/default_radius"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin_l"
            android:layout_marginTop="@dimen/default_margin_l"
            android:layout_width="wrap_content"
            android:text="💡"
            tools:ignore="HardcodedText"/>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/default_padding_l">

            <TextView
                android:id="@+id/text"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/time_posted"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_s"
                android:layout_width="match_parent"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>